[package]
name = "lumen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
lumen-layout = { workspace = true }
lumen-text = { workspace = true }
lumen-widgets = { workspace = true }

# The desktop window shell (winit) is desktop-only; mobile + web targets use
# their own shells (lumen-shell-android / -ios / -web), so excluding it here
# keeps winit → android-activity out of those builds.
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
lumen-shell = { workspace = true }
