[package]
name = "skills-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]

[dev-dependencies]
lumen-core = { workspace = true }
lumen-widgets = { workspace = true }
lumen-test = { workspace = true }
kurbo = { workspace = true }
serde_json = { workspace = true }
