[package]
name = "accordion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "accordion"
path = "src/lib.rs"

[[bin]]
name = "accordion"
path = "src/main.rs"

[[example]]
name = "accordion-win"
path = "examples/win.rs"

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
lumen-widgets = { workspace = true }
lumen-layout = { workspace = true }

[dev-dependencies]
lumen-shell = { workspace = true }
