[package]
name = "agent-gauntlet-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "agent_gauntlet_web"
path = "src/lib.rs"

[dependencies]
lumen-core = { workspace = true }
lumen-widgets = { workspace = true }

[dev-dependencies]
lumen-agent = { workspace = true }
serde_json = { workspace = true }
