[package]
name = "color_palette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "color_palette"
path = "src/lib.rs"

[[bin]]
name = "color_palette"
path = "src/main.rs"

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
lumen-widgets = { workspace = true }
lumen-layout = { workspace = true }
kurbo = { workspace = true }

[dev-dependencies]
lumen-shell = { workspace = true }
